<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bible</string>

    <string name="activity_manage_translation">Translations</string>
    <string name="activity_reading_progress">Reading Progress</string>
    <string name="activity_settings">Settings</string>

    <string name="action_copy">Copy</string>
    <string name="action_delete_translation">Delete</string>
    <string name="action_reading_progress">Reading Progress</string>
    <string name="action_remove_ads">Remove Ads</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>

    <string name="dialog_unknown_error">Unknown error.</string>
    <string name="dialog_no_translation">No translation available, download now?</string>
    <string name="dialog_retry">Fail to load, retry?</string>
    <string name="dialog_retry_network">Fail to load, please check your network connection and retry.</string>
    <string name="dialog_new_version_available_message">A new version is available, download now?</string>
    <string name="dialog_translation_delete_confirm_message">Are you sure to delete this translation?</string>
    <string name="dialog_translation_remove_failure_message">Failed to remove the translation, try again?</string>

    <string name="pref_night_mode">Night Mode</string>
    <string name="pref_rate_me">Rate me on Google Play</string>
    <string name="pref_screen_on">Screen On</string>
    <string name="pref_text_size">Text Size</string>
    <string name="pref_text_size_dialog_title">Select Text Size:</string>
    <string name="pref_text_size_very_small">Very Small</string>
    <string name="pref_text_size_small">Small</string>
    <string name="pref_text_size_medium">Medium</string>
    <string name="pref_text_size_large">Large</string>
    <string name="pref_text_size_very_large">Very Large</string>
    <string name="pref_version">Version</string>

    <string name="progress_dialog_translation_deleting">Deleting&#8230;</string>
    <string name="progress_dialog_translation_downloading">Downloading&#8230;</string>

    <string name="text_available_translation_info">%1$s\nSize: %2$d KB</string>

    <string name="text_available_translation">Available Translations</string>
    <string name="text_downloaded_translations">Downloaded Translations</string>
    <string name="text_more_translations">More</string>
    <string name="text_share_with">Share with&#8230;</string>

    <string name="text_continuous_reading">Consecutive Reading</string>
    <string name="text_continuous_reading_count">%1$d days</string>
    <string name="text_chapters_read">Chapters Read</string>
    <string name="text_finished_books">Books Finished</string>
    <string name="text_finished_old_testament">Old Testament</string>
    <string name="text_finished_new_testament">New Testament</string>
    <string name="text_last_read_chapter">You last read chapter %1$d, on %2$s.</string>

    <!--
    %1$d: date, %2$s: month, %3$d: year
     -->
    <string name="text_date">%1$d %2$s, %3$d</string>
    <string name="text_date_without_year">%1$d %2$s</string>
    <string-array name="text_months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="toast_translation_deleted">Deleted.</string>
    <string name="toast_translation_downloaded">Downloaded.</string>
    <string name="toast_verses_copied">Copied to clipboard.</string>
    <string name="toast_verses_searched">%1$d result(s) found.</string>

</resources>
