<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_screen_on"
        android:title="@string/pref_screen_on" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_night_mode"
        android:title="@string/pref_night_mode" />

    <ListPreference
        android:defaultValue="@string/pref_text_size_default"
        android:dialogTitle="@string/pref_text_size_dialog_title"
        android:entries="@array/pref_text_size_name"
        android:entryValues="@array/pref_text_size_value"
        android:key="pref_text_size"
        android:title="@string/pref_text_size_title" />

    <Preference android:title="@string/pref_rate_me">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="market://details?id=net.zionsoft.obadiah" />
    </Preference>

    <net.zionsoft.obadiah.ui.preference.VersionPreference android:title="@string/pref_version" />

</PreferenceScreen>
